# daily-news

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  start.bat  start.sh
backend/: README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 11a6f542a31b_initial_schema.py  d2a8b1e4c317_timeline_run_id_and_task_link.py
backend/src/: agent.py  api.py  cache.py  cli.py  config.py  db.py  extractor.py  fetcher.py  learner.py  main.py  models.py  scheduler.py  skeleton.py
backend/tests/: conftest.py  test_list_selectors_migration.py  test_parse_list.py  test_session_url_gate.py  test_xml_datastore.py
docker/: entrypoint.sh
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts  hooks.ts  sse.ts
frontend/src/components/: AutomationSettingsModal.tsx  Button.tsx  ChatPanel.tsx  Layout.tsx  Modal.tsx  NewSubscriptionForm.tsx  NumberInput.tsx
frontend/src/hooks/: useDraftSession.ts
frontend/src/pages/: AutomationPage.tsx  AutomationSubscriptionPage.tsx  NewSubscriptionPage.tsx  NewsDetailPage.tsx  SubscriptionDetailPage.tsx  SubscriptionsPage.tsx  TimelinePage.tsx
frontend/src/utils/: exportTimeline.ts
