[project]
name = "backend"
version = "0.1.0"
description = "daily-news backend: news-extracting agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.5",
    "langchain-openai>=0.3.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "langgraph-checkpoint-sqlite>=2.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.scripts]
daily-news = "src.main:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
